2009-08-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/Solution.cs:
	* MonoDevelop.Projects/ProjectService.cs:
	* MonoDevelop.Projects/SolutionEntityItem.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	* MonoDevelop.Projects.Dom.Serialization/ProjectCodeCompletionDatabase.cs:
	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	  Added some counters.

2009-08-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomReturnType.cs: Added bool as
	  static return type.

2009-08-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectService.cs:
	* MonoDevelop.Projects/SolutionConfiguration.cs: Updated
	  license. Those files were rewritten long time ago.

2009-08-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectService.cs:
	  Escape/unscape special character when writing/reading file
	  names. Fixes bug #526353.

2009-08-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/SolutionFolder.cs:
	* MonoDevelop.Projects/SolutionItemEventArgs.cs: When firing
	  the ItemRemoved event, provide the parent solution in the
	  args (the ParentSolution property of the item is already
	  reset at this stage).

2009-08-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomMethod.cs: Fixed constructor xml
	  documentation from monodoc source.

2009-08-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/IMember.cs:
	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/CopyDomVisitor.cs:
	* MonoDevelop.Projects.Dom/DomMemberDecorator.cs:
	* MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs:
	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	  Load xml documentation for referenced assemblies (doc need
	  to have the same full path with ".xml" extension instead of
	  ".dll")
